--- a/.gitignore
+++ b/.gitignore
@@ -2,19 +2,24 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/ESTDesktop/.vs
 /.vs
-/ESTDesktop/ESTDesktop.Web.Host/obj/
-/ESTDesktop/ESTDesktop.Web.Host/bin/
+/.vs
+/ESTDesktop.Web.Host/obj/
+/ESTDesktop.Web.Host/bin/
 
-/ESTDesktop/ESTDesktop.EntityFrameworkCore/obj/
-/ESTDesktop/ESTDesktop.EntityFrameworkCore/bin/
+/ESTDesktop.EntityFrameworkCore/obj/
+/ESTDesktop.EntityFrameworkCore/bin/
 
-/ESTDesktop/ESTDesktop.Core/obj/
-/ESTDesktop/ESTDesktop.Core/bin/
 
-/ESTDesktop/ESTDesktop.Service/obj/
-/ESTDesktop/ESTDesktop.Service/bin/
+/ESTDesktop.Core/obj/
+/ESTDesktop.Core/bin/
 
-/ESTDesktop/ESTDesktop.AppForm/obj/
-/ESTDesktop/ESTDesktop.AppForm/bin/
+/ESTDesktop.Service/obj/
+/ESTDesktop.Service/bin/
+
+/ESTDesktop.AppForm/obj/
+/ESTDesktop.AppForm/bin/
+
+/ESTDesktop.Form/obj/
+/ESTDesktop.Form/bin/
+/ESTDesktop.AppView/obj/Debug/net8.0-windows/ref/ESTDesktop.AppView.dll
