--- a/ESTDesktop.AppForm/ESTDesktop.AppForm.csproj
+++ b/ESTDesktop.AppForm/ESTDesktop.AppForm.csproj
@@ -9,7 +9,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ESTDesktop.AppView\ESTDesktop.AppView.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+	  <ProjectReference Include="..\ESTDesktop.AppView\ESTDesktop.AppView.csproj" />
+	  <ProjectReference Include="..\ESTDesktop.EntityFrameworkCore\ESTDesktop.EntityFrameworkCore.csproj" />
+	  
   </ItemGroup>
 
 </Project>
